--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
 
     <p>ini commit ke 1</p>
     <p>ini commit ke 2</p>
+    <p>ini commit ke 3</p>
+    <p>ini commit ke 4</p>
+    <p>ini commit ke 5</p>
+    <p>ini commit ke 6</p>
+    <p>ini commit ke 7</p>
+    <p>ini commit ke 8</p>
+    <p>ini commit ke 9</p>
+    <p>ini commit ke 10</p>
+   
 </body>
 </html>
