menambahkan commit ke 6

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p>ini commit ke 3</p>
     <p>ini commit ke 4</p>
     <p>ini commit ke 5</p>
+    <p>ini commit ke 6</p>
    
 </body>
 </html>
