--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>ini commit ke 4</p>
     <p>ini commit ke 5</p>
     <p>ini commit ke 6</p>
+    <p>ini commit ke 7</p>
    
 </body>
 </html>
