menambahkan commit ke 8

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>ini commit ke 5</p>
     <p>ini commit ke 6</p>
     <p>ini commit ke 7</p>
+    <p>ini commit ke 8</p>
    
 </body>
 </html>
