--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>ini commit ke 6</p>
     <p>ini commit ke 7</p>
     <p>ini commit ke 8</p>
+    <p>ini commit ke 9</p>
    
 </body>
 </html>
