menambahkan commit ke 10

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p>ini commit ke 7</p>
     <p>ini commit ke 8</p>
     <p>ini commit ke 9</p>
+    <p>ini commit ke 10</p>
    
 </body>
 </html>
